# worldtimeapi-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust-clippy.yml  rust.yml
examples/: example1.rs
src/: lib.rs  schema.rs  service.rs
