[package]
name = "worldtimeapi"
version = "0.5.3"
edition = "2021"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com"]
description = "A simple API for getting the current time in different timezones."
license = "MIT"
readme = "README.md"
repository = "https://github.com/martial-plains/worldtimeapi-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
reqwest = { version = "0.12.15", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
time = "0.3.37"
derive_more = { version = "2.0.1", features = ["display"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
mockito = "1.7.0"
